# ProcessAudioCapture

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  cli.py  pyproject.toml
python/: process_audio_capture.py
src/: LoopbackCapture.cpp  LoopbackCapture.h  ProcessAudioCapture.cpp  ProcessAudioCapture.h
src_python/process_audio_capture/: __init__.py  _macos.py  _windows.py
test/: test_capture.cpp
